--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/hungrilla/potato#readme",
   "dependencies": {
+    "request-promise": "^0.4.2",
     "sequelize": "^3.1.1"
   }
 }
