--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/hungrilla/potato#readme",
   "dependencies": {
+    "cheerio": "^0.19.0",
+    "mysql": "^2.6.2",
     "request-promise": "^0.4.2",
     "sequelize": "^3.1.1"
   }
