--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/hungrilla/potato#readme",
   "dependencies": {
+    "bluebird": "^2.9.27",
+    "chalk": "^1.0.0",
     "cheerio": "^0.19.0",
     "mysql": "^2.6.2",
     "request-promise": "^0.4.2",
