--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "chalk": "^1.0.0",
     "cheerio": "^0.19.0",
     "mysql": "^2.6.2",
-    "request-promise": "^0.4.2",
+    "request": "^2.58.0",
     "sequelize": "^3.1.1"
   },
   "devDependencies": {
